# cspear

./: .gitignore  CMakeLists.txt  README.md  main.cc  todo.txt
include/cspear/: cspear
include/cspear/array/: accumulate.h  array-cmp-op.h.hh  array-forward-decl.h  array-logical-op.h.hh  array-math.h.hh  array-misc.h  array-op-math.h  array-op.h  array-op.h.hh  array-reduce.h  array-reduce.h.hh  array.h  array.h.hh  macro-accumulate.h  macro-op.h  macro-reduce.h  op.h  reduce.h  ufuncs-math.h  ufuncs.h  utils.h
include/cspear/core/: array-binop.h  array-bool-op.h  array-bool-op.h.template  array-cmp-op.h.template  array-logical-op.h.template  array-math.h.hh  array-misc.h  array-op.h  array-op.h.hh  array-reduce.h  array-reduce.h.hh  array.h  array.h.hh  array.h.template  array_init.h  array_reshape_resize.h  assert.h  utils.h
include/cspear/iterators/: accumulate-iterator.h  bcast-iterator.h  ewise-iterator.h  ewise-simd-iterator.h  reduce-iterator.h  stepback-iterator.h
test/: .gitignore  CMakeLists.txt  main.cc
test/array/: test-bcast.h  test-init.h  test-op.h  test-reshape.h
test/include/: test_params.h
test/test-array/: test-accum.h  test-bcast.h  test-init.h  test-nil.h  test-op.h  test-reduce.h  test-reshape.h
test/test-cases/: test-copy.h  test-refs.h
test/test-lib/: test-array.h  test-grad.h  test-hist.h  test-interp.h  test-math.h
test/test-random/: test-shuffle.h
test/test-simd/: test-avx.h
test/test-view/: test-contiguous-view.h  test-filter-view.h  test-index-view.h  test-slice-view.h
tools/srcgen/: .gitignore  main.py
(+29 files in other folders)
